name:                habit
version:             0.2.2.0
synopsis:            Haskell message bot framework
description:         Framework for building text message bots for popular platforms
homepage:            https://github.com/airalab/habit#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md

executable hello-bot
  hs-source-dirs:      examples
  main-is:             Hello.hs
  build-depends:       base >= 4.7 && < 5
                     , habit
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

library
  hs-source-dirs:      src
  exposed-modules:     Web.Bot
                     , Web.Bot.Log
                     , Web.Bot.User
                     , Web.Bot.Story
                     , Web.Bot.Message
                     , Web.Bot.Metrics
                     , Web.Bot.Persist
                     , Web.Bot.Platform
                     , Web.Bot.Platform.Telegram
  other-modules:       Web.Bot.Story.Internal
  build-depends:       base                  >= 4.9     && <4.10
                     , persistent-postgresql ==2.6.*
                     , persistent-template   >=2.5.1.6  && <2.6
                     , persistent-sqlite     ==2.6.*
                     , persistent-mysql      ==2.6.*
                     , persistent            ==2.6.*
                     , transformers-base     >=0.4.4    && <0.5
                     , http-client-tls       >=0.2.4.1  && <0.3
                     , monad-control         >=1.0.1.0  && <1.1
                     , transformers          >=0.5.2.0  && <0.6
                     , monad-logger          >=0.3.20.1 && <0.4
                     , telegram-api          >=0.5.0.1  && <0.6
                     , http-client           >=0.4.31.2 && <0.5
                     , containers            >=0.5.7.1  && <0.6
                     , cryptonite            ==0.19.*
                     , resourcet             >=1.1.8.1  && <1.2
                     , pipes                 >=4.1.9    && <4.2
                     , text                  >=1.2.2.1  && <1.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/airalab/habit
