name:                habit
version:             0.3.0.1
synopsis:            Haskell message bot framework
description:         Framework for building text message bots for popular platforms
homepage:            https://github.com/airalab/habit#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md

executable hello-bot
  hs-source-dirs:      examples
  main-is:             Hello.hs
  build-depends:       base >= 4.7 && < 5
                     , habit
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

library
  hs-source-dirs:      src
  exposed-modules:     Web.Bot
                     , Web.Bot.Log
                     , Web.Bot.User
                     , Web.Bot.Story
                     , Web.Bot.Message
                     , Web.Bot.Metrics
                     , Web.Bot.Persist
                     , Web.Bot.Platform
                     , Web.Bot.Platform.Telegram
                     , Web.Bot.Platform.FBMessenger
  other-modules:       Web.Bot.Story.Internal
  build-depends:       base                  >= 4.9     && <4.10
                     , persistent-postgresql
                     , persistent-template
                     , persistent-sqlite
                     , persistent-mysql
                     , persistent
                     , transformers-base
                     , http-client-tls
                     , fbmessenger-api
                     , servant-server
                     , monad-control
                     , transformers
                     , monad-logger
                     , telegram-api
                     , http-client
                     , containers
                     , cryptonite
                     , resourcet
                     , pipes
                     , warp
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/airalab/habit
